@@ -95,11 +95,14 @@ static void kmailMsgHandler(QtMsgType aType, const char* aMsg)
   case QtWarningMsg:
     fprintf(stderr, "%s: %s\n", (const char*)app->appName(), msg.data());
     if (strncmp(aMsg,"KCharset:",9) != 0 &&
-	strncmp(aMsg,"QGManager:",10) != 0)
+	strncmp(aMsg,"QGManager:",10) != 0 && 
+	strncmp(aMsg,"QPainter:",9) != 0 &&
+	strncmp(aMsg,"QPixmap:",8) != 0)
     {
       KMsgBox::message(NULL, appName+" "+i18n("warning"), msg.data(), 
 		       KMsgBox::EXCLAMATION);
     }
+    else kdebug(KDEBUG_INFO, 0, msg);
     break;
 
   case QtFatalMsg:
